# alpha-bot

./: .env.example  .gitignore  CLAUDE.md  TRENCH_EDGE_PROGRESS.md  analyze_group.py  backfill_channel_scores.py  filter_caller.py  pyproject.toml  run.py  setup_telethon.py
alpha_bot/: config.py  main.py
alpha_bot/conviction/: engine.py  models.py
alpha_bot/delivery/: base.py  telegram_bot.py
alpha_bot/ingestion/: base.py  factory.py  models.py  twikit_client.py  twitter.py
alpha_bot/platform_intel/: __init__.py  basescan.py  clanker_realtime.py  clanker_scraper.py  flaunch_tracker.py  models.py  percentile_rank.py  platform_ingest.py  solana_rpc.py  virtuals_scorer.py
alpha_bot/research/: coingecko.py  dexscreener.py  narratives.py  pipeline.py  pnl_analyzer.py  pump_forensics.py  pump_scanner.py  report.py  risk.py  smart_money.py  summarizer.py  telegram_group.py
alpha_bot/scanner/: __init__.py  alerts.py  candidate_scorer.py  daily_digest.py  depth_scorer.py  dex_discovery.py  models.py  scanner_loop.py  token_matcher.py  trend_tracker.py  watchlist_monitor.py
alpha_bot/scoring/: models.py  scorer.py
alpha_bot/scoring_engine/: backtest.py  models.py  recalibrate.py
alpha_bot/storage/: database.py  models.py  repository.py
alpha_bot/tg_intel/: __init__.py  convergence.py  models.py  pattern_extract.py  platform_detect.py  price_resolver.py  reaction_velocity.py  recorder.py  scorer.py
alpha_bot/trading/: listener.py  maestro_sender.py  models.py  position_manager.py  price_monitor.py  safety.py  sigma_sender.py
scripts/: backfill_entities.py
(+36 files in other folders)
