[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha-bot"
version = "0.1.0"
description = "Ingest tweets, score for trading alpha, deliver signals via dashboard and Telegram"
requires-python = ">=3.11"
dependencies = [
    "tweepy>=4.14",
    "vaderSentiment>=3.3.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-telegram-bot>=21.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "anthropic>=0.42",
    "twikit>=2.3",
    "telethon>=1.36",
    "pytrends>=4.9",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
